--- a/Views/Torneo/Diseño8.cshtml
+++ b/Views/Torneo/Diseño8.cshtml
@@ -325,27 +325,79 @@
             var punteoCont = 1;
             var contador = 1;
             var ganadores = [];
+            var ganadoresParciales = [];
+            var perdedores = [];
 
             function punteo() {
                 if (contador <= 3) {
                     var jugador17 = document.getElementById("equipo17").value;
+                    var jugador1 = document.getElementById("equipo1").value;
+                    var jugador2 = document.getElementById("equipo2").value;
+                    if (jugador17 == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     var jugador18 = document.getElementById("equipo18").value;
+                    var jugador1 = document.getElementById("equipo3").value;
+                    var jugador2 = document.getElementById("equipo4").value;
+                    if (jugador18 == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     var jugador19 = document.getElementById("equipo19").value;
+                    var jugador1 = document.getElementById("equipo5").value;
+                    var jugador2 = document.getElementById("equipo6").value;
+                    if (jugador19 == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     var jugador20 = document.getElementById("equipo20").value;
+                    var jugador1 = document.getElementById("equipo7").value;
+                    var jugador2 = document.getElementById("equipo8").value;
+                    if (jugador20 == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     ganadores.push(jugador17);
+                    ganadoresParciales.push(jugador17);
                     ganadores.push(jugador18);
+                    ganadoresParciales.push(jugador18);
                     ganadores.push(jugador19);
+                    ganadoresParciales.push(jugador19);
                     ganadores.push(jugador20);
+                    ganadoresParciales.push(jugador20);
                      $.ajax(
                         {
                             type: 'POST',
                             dataType: 'text',
                             url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
-                            data: { Usuario: ganadores, Puntaje: 1, Color1: "negras", Movimientos: 0, EstadoPartida: "Ganó", TipoPartida: "Campeonato" },
+                            data: { Usuario: ganadoresParciales, Puntaje: 1, Color1: "negras", Movimientos: 0, EstadoPartida: "Ganó", TipoPartida: "Campeonato" },
                             success:
                                 function (response) {
                                     var cadena = response;
-                                    alert("Jugador 1: " + cadena)
+                                },
+                            error:
+                                function (response) {
+                                    alert("ERROR: " + response);
+                                }
+                         });
+                    $.ajax(
+                        {
+                            type: 'POST',
+                            dataType: 'text',
+                            url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
+                            data: { Usuario: perdedores, Puntaje: 0, Color1: "negras", Movimientos: 0, EstadoPartida: "Perdió", TipoPartida: "Campeonato" },
+                            success:
+                                function (response) {
+                                    var cadena = response;
                                 },
                             error:
                                 function (response) {
@@ -356,6 +408,8 @@
                     $('#equipo18').empty();
                     $('#equipo19').empty();
                     $('#equipo20').empty();
+                    ganadoresParciales = [];
+                    perdedores = [];
                 }
                 if (contador == 3) {
                     $.ajax({
@@ -398,23 +452,57 @@
                         contadorInterno++;
                     }
                     ganadores = []
+                    ganadoresParciales = [];
+                    perdedores = [];
                 }
 
                 if (contador >= 4 && contador <= 6) {
                     var jugador25 = document.getElementById("equipo25").value;
+                    var jugador1 = document.getElementById("equipo17").value;
+                    var jugador2 = document.getElementById("equipo18").value;
+                    if (jugador25 == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     var jugador26 = document.getElementById("equipo26").value;
+                    var jugador1 = document.getElementById("equipo19").value;
+                    var jugador2 = document.getElementById("equipo20").value;
+                    if (jugador26 == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     ganadores.push(jugador25);
+                    ganadoresParciales.push(jugador25);
                     ganadores.push(jugador26);
+                    ganadoresParciales.push(jugador26);
                     $.ajax(
                         {
                             type: 'POST',
                             dataType: 'text',
                             url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
-                            data: { Usuario: ganadores, Puntaje: 1, Color1: "negras", Movimientos: 0, EstadoPartida: "Ganó", TipoPartida: "Campeonato" },
+                            data: { Usuario: ganadoresParciales, Puntaje: 1, Color1: "negras", Movimientos: 0, EstadoPartida: "Ganó", TipoPartida: "Campeonato" },
                             success:
                                 function (response) {
                                     var cadena = response;
-                                    alert("Jugador 1: " + cadena)
+                                },
+                            error:
+                                function (response) {
+                                    alert("ERROR: " + response);
+                                }
+                        });
+                    $.ajax(
+                        {
+                            type: 'POST',
+                            dataType: 'text',
+                            url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
+                            data: { Usuario: perdedores, Puntaje: 0, Color1: "negras", Movimientos: 0, EstadoPartida: "Perdió", TipoPartida: "Campeonato" },
+                            success:
+                                function (response) {
+                                    var cadena = response;
                                 },
                             error:
                                 function (response) {
@@ -423,6 +511,8 @@
                         });
                     $('#equipo25').empty();
                     $('#equipo26').empty();
+                    ganadoresParciales = [];
+                    perdedores = [];
                 }
                 if (contador == 6) {
                     $.ajax({
@@ -459,21 +549,47 @@
                         contadorInterno++;
                     }
                     ganadores = []
+                    ganadoresParciales = [];
+                    perdedores = [];
                 }
 
                 if (contador >= 7 && contador <= 9) {
                     var final = document.getElementById("final").value;
+                    var jugador1 = document.getElementById("equipo25    ").value;
+                    var jugador2 = document.getElementById("equipo26").value;
+                    if (final == jugador1) {
+                        perdedores.push(jugador2)
+                    }
+                    else {
+                        perdedores.push(jugador1)
+                    }
                     ganadores.push(final);
+                    ganadoresParciales.push(final);
                      $.ajax(
                         {
                             type: 'POST',
                             dataType: 'text',
-                            url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
-                            data: { Usuario: ganadores, Puntaje: 1, Color1: "negras", Movimientos: 0, EstadoPartida: "Ganó", TipoPartida: "Campeonato" },
+                             url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
+                             data: { Usuario: ganadoresParciales, Puntaje: 1, Color1: "negras", Movimientos: 0, EstadoPartida: "Ganó", TipoPartida: "Campeonato" },
                             success:
                                 function (response) {
                                     var cadena = response;
-                                    alert("Jugador 1: " + cadena)
+                                },
+                            error:
+                                function (response) {
+                                    alert("ERROR: " + response);
+                                }
+                         });
+                    $.ajax(
+                        {
+                            type: 'POST',
+                            dataType: 'text',
+                            url: '@Url.Action("AnadirPuntajeCampeonato", "Partidas")',
+                            data: { Usuario: perdedores, Puntaje: 0, Color1: "negras", Movimientos: 0, EstadoPartida: "Perdió", TipoPartida: "Campeonato" },
+                            success:
+                                function (response) {
+                                    var cadena = response;
+                                    alert(cadena)
                                 },
                             error:
                                 function (response) {
@@ -481,6 +597,8 @@
                                 }
                         });
                     $('#final').empty();
+                    ganadoresParciales = [];
+                    perdedores = [];
                 }
                 if (contador == 9) {
                     document.getElementById("final").style.visibility = "hidden";
@@ -495,6 +613,21 @@
                                 for (var j = 0; j < cadena.length; j++)
                                     document.getElementById("Fin").style.visibility = "visible";
                                     document.getElementById("Fin").innerHTML = cadena;
+
+                                    $.ajax({
+                                            type: 'POST',
+                                            dataType: 'text',
+                                            url: '@Url.Action("datosTorneoFinal", "Torneo")',
+                                            data: { ganador: cadena},
+                                            success:
+                                                function (response) {
+                                                        },
+                                                error:
+                                                    function (response) {
+                                                        alert("Error: " + response);
+                                                    }
+                                        });
+
                                     },
                             error:
                                 function (response) {
@@ -504,12 +637,9 @@
                     $("#equipo29").prop('disabled', 'disabled');
                     $("#equipo30").prop('disabled', 'disabled');
 
-
                 }
-
                 contador++;
             }
-
         </script>
     }
 </body>
