--- a/Views/Torneo/TableroCampeonato.cshtml
+++ b/Views/Torneo/TableroCampeonato.cshtml
@@ -1693,7 +1693,7 @@
                              type: 'POST',
                              dataType: 'text',
                             url: '@Url.Action("AnadirPuntaje", "Partidas")',
-                            data: { Usuario: usuario, Puntaje: punteo, Color1: color, Movimientos: movimientosNegro, EstadoPartida: estado, TipoPartida: "Jugador VS Jugador" },
+                            data: { Usuario: usuario, Puntaje: punteo, Color1: color, Movimientos: movimientosNegro, EstadoPartida: estado, TipoPartida: "Campeonato" },
                              success:
                                  function (response) {
                                      var cadena = response;
